[package]
name = "prompt-sentinel"
version = "0.1.2"
edition = "2021"
description = "A high-performance CLI tool for LLM prompt regression testing"
authors = ["Mallory Antomarchi"]
repository = "https://github.com/rnnpeng/prompt-sentinel"
homepage = "https://github.com/rnnpeng/prompt-sentinel"
license = "MIT"
readme = "README.md"
keywords = ["llm", "testing", "prompt-engineering", "cli", "ai"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
csv = "1.3"
colored = "2"
dotenvy = "0.15"
anyhow = "1"
async-trait = "0.1"
indicatif = "0.17"
regex = "1"
notify = "6"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
